[package]
name = "az_lang"
description = "AZ language."
license = "MIT"
repository = "https://github.com/az-lang/az"
version = "0.0.0"
edition = "2021"
rust-version = "1.71.0"

[lib]
name = "az"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "^1.0.197", optional = true, features = ["derive"] }

[dev-dependencies]
proptest = "^1.4.0"
stacker = "^0.1.15"
