[package]
name = "az_lang_python_binding"
description = "AZ language Python binding."
license = "MIT"
repository = "https://github.com/az-lang/az"
version = "0.0.0"
edition = "2021"
rust-version = "1.71.0"

[lib]
name = "az_lang_python_binding"
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "^0.21"
features = ["extension-module"]

[dependencies.az_lang]
path = "../language"

[build-dependencies]
pyo3-build-config = "^0.21"
